examples/servicemesh_with_coe_and_adm/manifest/peerAuth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: citrix-system
spec:
  mtls:
    mode: DISABLE
