examples/servicemesh_with_coe_and_adm/manifest/httpbin_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-httpbin
  annotations:
   kubernetes.io/ingress.class: "vpx"
   ingress.citrix.com/frontend-ip: "<VPX-VIP>"
   ingress.citrix.com/secure_backend: '{"citrix-adc-istio-ingress-gateway-citrix-ingress-svc": "True"}'
   ingress.citrix.com/backend-sslprofile: '{"citrix-adc-istio-ingress-gateway-citrix-ingress-svc":{"snienable": "enabled","commonname": "www.httpbin.com"}}'
spec:
  tls:
  - secretName: httpbin-ingressgateway-certs
  rules:
  - host:  www.httpbin.com
    http:
      paths:
      - path:
        backend:
          serviceName: citrix-adc-istio-ingress-gateway-citrix-ingress-svc
          servicePort: 443
