examples/servicemesh_with_coe_and_adm/manifest/resource.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
spec:
  egress:
  - hosts:
    - "citrix-system/*"
    - "bookinfo/*"
    - "istio-system/*"
    - "httpbin/*"
